# hebrew-python

./: README.md  jupyter.ipynb  pyproject.toml  requirements.txt
examples/: for-loop.hepy  gui.hepy  jupyter.ipynb  main.hepy  passowrd-generator.hepy
hebrew_python/: LICENSE  __init__.py  __main__.py  error_hook.py  hebrew_builtins.json  hebrew_data.py  hebrew_keywords.json  hook.py  ipython.py  אקראי.py  ממשק.py  שגיאות.py
tests/: basic_file.hepy  import_file.hepy  test_hebrew_ipython.py  test_hebrew_python.py
